Chaning font size, fix image overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ html {
 
 body {
   font-family: 'Work Sans', Arial, sans-serif;
-  font-size: 21px;
+  font-size: 19px;
   font-weight: 200;
   color: #454547;
   background-color: #fff;
@@ -33,6 +33,7 @@ body {
 #wrapper {
   width: 960px;
   margin:0 auto;
+  overflow: hidden;
 }
 
 
